Update refactoring card enum type
카드정보를 int에서 enum class Card로 수정.

--- a/src/koikoi-scorer.vcxproj
+++ b/src/koikoi-scorer.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="koikoi-scorer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="card-define.h" />
     <ClInclude Include="koikoi-scorer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
