--- a/src/koikoi-scorer.vcxproj.filters
+++ b/src/koikoi-scorer.vcxproj.filters
@@ -5,5 +5,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="koikoi-scorer.h" />
+    <ClInclude Include="card-define.h" />
   </ItemGroup>
 </Project>
