--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ os:
   - linux
 
 sudo: required
+dist: trusty
 addons:
   apt:
     sources:  
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise-3.9
+      - ppa:ubuntu-toolchain-r/test      
+      - llvm-toolchain-trusty-3.9
     packages:
       - clang-3.9
       - g++-6
