Fix build configuration
Travis-CI apt 설정 화이트리스트 참조하여 수정.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ os:
   - linux
 
 sudo: required
-dist: trusty
 addons:
   apt:
     sources:  
-      - ppa:ubuntu-toolchain-r/test      
-      - llvm-toolchain-trusty-3.9
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise
     packages:
       - clang-3.9
       - g++-6
