--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,14 @@ os:
   - linux
 
 sudo: required
+dist: trusty
 addons:
   apt:
     sources:  
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise
+      - llvm-toolchain-precise-3.8
     packages:
-      - clang-3.9
+      - clang-3.8
       - g++-6
       - gcc-6
 
