--- a/src/koikoi-scorer.vcxproj
+++ b/src/koikoi-scorer.vcxproj
@@ -118,10 +118,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="begining-hands.cpp" />
     <ClCompile Include="card-functor.cpp" />
     <ClCompile Include="koikoi-scorer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="begining-hands.h" />
     <ClInclude Include="card-define.h" />
     <ClInclude Include="card-functor.h" />
     <ClInclude Include="koikoi-scorer.h" />
