--- a/test/koikoi-scorer-tests.vcxproj
+++ b/test/koikoi-scorer-tests.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="begininghands_test.cpp" />
     <ClCompile Include="koikoiscorer_test.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
