--- a/test/koikoi-scorer-tests.vcxproj.filters
+++ b/test/koikoi-scorer-tests.vcxproj.filters
@@ -3,5 +3,6 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="koikoiscorer_test.cpp" />
+    <ClCompile Include="begininghands_test.cpp" />
   </ItemGroup>
 </Project>
