Update build configuration
받은패로 바로 나기 추가된 소스파일 추가.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,14 @@
 set(scorer_src
-	koikoi-scorer.cpp
-	card-functor.cpp
+	koikoi-scorer.cpp	
+	card-functor.cpp	
+	begining-hands.cpp
 )
 
 set(scorer_inc
-	card-define.h
-	card-functor.h
 	koikoi-scorer.h
+	card-define.h
+	card-functor.h	
+	begining-hands.h
 )
 
 add_library(koikoi-scorer STATIC ${scorer_src} ${scorer_inc})
