Update rename test files
테스트 파일 이름 변경.
물리적 대상보다는 논리적 그룹단위로 이름을 변경합니다.

--- a/test/koikoi-scorer-tests.vcxproj
+++ b/test/koikoi-scorer-tests.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="begininghands_test.cpp" />
-    <ClCompile Include="koikoiscorer_test.cpp" />
+    <ClCompile Include="instancewins_test.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="scoringhands_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\koikoi-scorer.vcxproj">
