--- a/test/koikoi-scorer-tests.vcxproj.filters
+++ b/test/koikoi-scorer-tests.vcxproj.filters
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="koikoiscorer_test.cpp" />
-    <ClCompile Include="begininghands_test.cpp" />
+    <ClCompile Include="instancewins_test.cpp" />
+    <ClCompile Include="scoringhands_test.cpp" />
   </ItemGroup>
 </Project>
