Update refactoring test
점수계산 테스트에서 점수 계산과 직접 관계없는 기능 테스트를 별도의 테스트 파일로 분리.

--- a/test/koikoi-scorer-tests.vcxproj
+++ b/test/koikoi-scorer-tests.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="instancewins_test.cpp" />
+    <ClCompile Include="koikoiscorer_test.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scoringhands_test.cpp" />
   </ItemGroup>
