--- a/test/koikoi-scorer-tests.vcxproj.filters
+++ b/test/koikoi-scorer-tests.vcxproj.filters
@@ -5,5 +5,6 @@
     <ClCompile Include="instancewins_test.cpp" />
     <ClCompile Include="scoringhands_test.cpp" />
     <ClCompile Include="koikoiscorer_test.cpp" />
+    <ClCompile Include="optionrules_test.cpp" />
   </ItemGroup>
 </Project>
