Update refactoring options
추가규칙을 rule-define으로 분리.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(scorer_inc
 	card-define.h
 	card-functor.h	
 	begining-hands.h
+	rule-define.h
 )
 
 add_library(koikoi-scorer STATIC ${scorer_src} ${scorer_inc})
