Fix cpputest conflict STL compile error
std::set 컴파일 에러가 cpputest를 잘못 포함해 나는 문제라 수정.
문서에 잘 나와있었음. https://cpputest.github.io/manual.html#memory_leak_detection

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ set(cpputest_lib
     ${CMAKE_STATIC_LIBRARY_PREFIX}CppUTest${CMAKE_STATIC_LIBRARY_SUFFIX}
 )
 
-set(cpputest_new_macro ${cpputest_home}/include/CppUTest/MemoryLeakDetectorNewMacros.h)
+set(cpputest_new_macro MyOwnMemoryLeakDetectorNewMacros.h)
 set(cpputest_malloc_macro ${cpputest_home}/include/CppUTest/MemoryLeakDetectorMallocMacros.h)
 
 if (MSVC)
