--- a/src/koikoi-scorer.vcxproj
+++ b/src/koikoi-scorer.vcxproj
@@ -121,13 +121,19 @@
     <ClCompile Include="begining-hands.cpp" />
     <ClCompile Include="card-functor.cpp" />
     <ClCompile Include="koikoi-scorer.cpp" />
+    <ClCompile Include="point-pile.cpp" />
+    <ClCompile Include="point-counter.cpp" />
+    <ClCompile Include="point-rules.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="begining-hands.h" />
     <ClInclude Include="card-define.h" />
     <ClInclude Include="card-functor.h" />
     <ClInclude Include="koikoi-scorer.h" />
+    <ClInclude Include="point-pile.h" />
+    <ClInclude Include="point-rules.h" />
     <ClInclude Include="rule-define.h" />
+    <ClInclude Include="point-counter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
