--- a/src/koikoi-scorer.vcxproj.filters
+++ b/src/koikoi-scorer.vcxproj.filters
@@ -1,15 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="koikoi-scorer.cpp" />
-    <ClCompile Include="card-functor.cpp" />
-    <ClCompile Include="begining-hands.cpp" />
+    <ClCompile Include="koikoi-scorer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="begining-hands.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="card-functor.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="point-counter.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="point-pile.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="point-rules.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="koikoi-scorer.h" />
-    <ClInclude Include="card-define.h" />
-    <ClInclude Include="card-functor.h" />
-    <ClInclude Include="begining-hands.h" />
-    <ClInclude Include="rule-define.h" />
+    <ClInclude Include="rule-define.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="card-define.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="koikoi-scorer.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="begining-hands.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="card-functor.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="point-counter.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="point-pile.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="point-rules.h">
+      <Filter>src</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="include">
+      <UniqueIdentifier>{c73293d4-e2b3-40c6-ba3e-d1d47297df01}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src">
+      <UniqueIdentifier>{625b8377-4d69-4284-878b-7fc3d9bebca6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
