--- a/test/koikoi-scorer-tests.vcxproj.filters
+++ b/test/koikoi-scorer-tests.vcxproj.filters
@@ -1,13 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="instancewins_test.cpp" />
-    <ClCompile Include="scoringhands_test.cpp" />
-    <ClCompile Include="koikoiscorer_test.cpp" />
-    <ClCompile Include="optionrules_test.cpp" />
+    <ClCompile Include="main.cpp">
+      <Filter>main</Filter>
+    </ClCompile>
+    <ClCompile Include="instancewins_test.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+    <ClCompile Include="koikoiscorer_test.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+    <ClCompile Include="optionrules_test.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
+    <ClCompile Include="scoringhands_test.cpp">
+      <Filter>tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyOwnNewMacros.h" />
+    <Filter Include="tests">
+      <UniqueIdentifier>{3382c94a-b06f-4dfa-8328-45fe6b25312c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="main">
+      <UniqueIdentifier>{1c0db498-a25d-45da-b78b-8190eb2a1f6a}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyOwnNewMacros.h">
+      <Filter>main</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
