--- a/src/koikoi-scorer.vcxproj
+++ b/src/koikoi-scorer.vcxproj
@@ -123,8 +123,9 @@
     <ClCompile Include="koikoi-scorer.cpp" />
     <ClCompile Include="monthly-card.cpp" />
     <ClCompile Include="point-pile.cpp" />
-    <ClCompile Include="point-counter.cpp" />
     <ClCompile Include="point-rules.cpp" />
+    <ClCompile Include="score-table.cpp" />
+    <ClCompile Include="scoring-hand-calculator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="begining-hands.h" />
@@ -136,7 +137,9 @@
     <ClInclude Include="point-pile.h" />
     <ClInclude Include="point-rules.h" />
     <ClInclude Include="rule-define.h" />
-    <ClInclude Include="point-counter.h" />
+    <ClInclude Include="score-table.h" />
+    <ClInclude Include="scoring-define.h" />
+    <ClInclude Include="scoring-hand-calculator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
